# ibl-edx-lti-1p3-provider-app

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  setup.py
src/lti_1p3_provider/: admin.py  apps.py  auth.py  dl_content_selection.py  error_formatter.py  error_response.py  exceptions.py  grades.py  jwks.py  models.py  services.py  session_access.py  signal_handlers.py  tasks.py  urls.py  views.py
src/lti_1p3_provider/api/: serializers.py  ssl_services.py  urls.py  views.py
src/lti_1p3_provider/api/tests/: test_views.py
src/lti_1p3_provider/migrations/: 0001_initial.py  0002_launchgate.py  0003_auto_20240808_2032.py  0004_auto_20240822_1832.py  0004_ltikeyorg.py  0005_ltiprofile_email.py  0006_launchgate_block_filter_and_more.py  0007_launchgate_dl_content_filter_path.py
src/lti_1p3_provider/settings/: common.py
src/lti_1p3_provider/templates/lti_1p3_provider/: error.html  relaunch_error.html  select_deep_link_content.html
src/lti_1p3_provider/tests/: base.py  factories.py  fakes.py  test_auth.py  test_dl_selection.py  test_error_formatter.py  test_grades.py  test_models.py  test_signals.py  test_tasks.py  test_views.py  test_views_lti.py
src/lti_1p3_provider/tests/test_views/: test_deep_linking_views.py  test_views.py
tutor_plugins/: enable_lti_1p3_provider.py
