[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ibl-lti-1p3-provider"
version = "0.0.1"
authors = [{ name = "IBL", email = "ibl@ibleducation.com" }]
description = "LTI 1.3 Provider"
readme = "README.md"
classifiers = []
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.1",
    "black==23.3.0",
    "isort==5.12.0",
    "pytest==7.3.1",
    "factory-boy==3.2.1",
]

[project.entry-points."lms.djangoapps"]
lti_1p3_provider = "lti_1p3_provider.apps:LTI1p3ProviderConfig"
