[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ibl-lti-1p3-provider"
version = "0.0.1"
authors = [{ name = "IBL", email = "ibl@ibleducation.com" }]
description = "LTI 1.3 Provider"
readme = "README.md"
classifiers = []
dependencies = []

[project.optional-dependencies]
dev = []

[project.entry-points."lms.djangoapps"]
lti_1p3_provider = "lti_1p3_provider.apps:Lti1p3ProviderConfig"
